fixed aligning about us page

--- a/src/components/pages/AboutUs.css
+++ b/src/components/pages/AboutUs.css
@@ -117,6 +117,8 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
 }
 .card-holder {
   width: auto;
